--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,4 +1,5 @@
----
-title: "Quickstart"
-description: "Start building awesome documentation in under 5 minutes"
----
+# Solscan API Reference
+
+<redoc spec-url="/solscan-openapi.json"></redoc>
+
+<script src="https://cdn.redoc.ly/redoc/latest/bundles/redoc.standalone.js"></script>
