Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,5 +1,11 @@
 Gm World
 
-<ParamField path="param" type="string">
-  An example of a parameter field
+import MySnippet from '/snippets/my-snippet.mdx';
+
+
+<ParamField query="chainid" type="string" initialValue="1">
+  The chainID to use
 </ParamField>
+
+
+<MySnippet word="bananas" />
