Add chain variable and use in docs

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,6 +1,7 @@
-Gm World
-
 import MySnippet from '/snippets/my-snippet.mdx';
+import { chain } from '/snippets/chain.mdx';
+
+Gm World
 
 
 <ParamField query="chainid" type="string" initialValue="1">
@@ -9,3 +10,5 @@ import MySnippet from '/snippets/my-snippet.mdx';
 
 
 <MySnippet word="bananas" />
+
+The chain now is {chain}
