--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,4 +1,8 @@
+import { chain } from '/snippets/chain.mdx';
+
 # Solscan API Reference
+
+The chain now is {chain}
 
 <redoc spec-url="/solscan-openapi.json"></redoc>
 
