Add React guide and dynamic chain display

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,5 +1,5 @@
 import MySnippet from '/snippets/my-snippet.mdx';
-import { chain } from '/snippets/chain.mdx';
+import { ChainDisplay } from '/snippets/chain-display.jsx';
 
 Gm World
 
@@ -11,4 +11,6 @@ Gm World
 
 <MySnippet word="bananas" />
 
-The chain now is {chain}
+The chain now is <ChainDisplay />
+
+For details on building your own interactive components, see the [React guide](/essentials/react).
