--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,8 +1,10 @@
-import { chain } from '/snippets/chain.mdx';
+import { ChainDisplay } from '/snippets/chain-display.jsx';
 
 # Solscan API Reference
 
-The chain now is {chain}
+The chain now is <ChainDisplay />
+
+Need a refresher on React components? Check out the [React guide](/essentials/react).
 
 <redoc spec-url="/solscan-openapi.json"></redoc>
 
