--- a/api-reference/endpoint/etherscan-balance.mdx
+++ b/api-reference/endpoint/etherscan-balance.mdx
@@ -3,10 +3,13 @@ title: 'Get Ether Balance for a Single Address'
 api: 'GET /v2/api'
 ---
 
-Returns the Ether balance of a given address.
+import { chain } from '/snippets/custom-variables.mdx';
+
+
+Returns the Ether balance of a given address on {chain}.
 
   <ParamField query="chainid" type="string" initialValue="1">
-    Chain ID of the network (1 for Ethereum mainnet).
+    Chain ID of the network {chain}.
   </ParamField>
   <ParamField query="module" type="string" initialValue="account">
     Module name (set to 'account').
