Test on introduction

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,1 +1,11 @@
-Gm World
+---
+title: 'Introduction'
+description: 'Testing some custom variables'
+---
+
+import { chain } from '/snippets/custom-variables.mdx';
+import MySnippet from '/snippets/my-snippet.mdx';
+
+ The chain you're looking at now is {chain}.
+
+<MySnippet word="example" />
