--- a/api-reference/endpoint/etherscan-balance.mdx
+++ b/api-reference/endpoint/etherscan-balance.mdx
@@ -7,7 +7,7 @@ import { chain } from '/snippets/custom-variables.mdx';
 
 Returns the Ether balance of a given address on {chain}.
 
-  <ParamField query="chainid" type="string" initialValue={chain}>
+  <ParamField query="chainid" type="string" initialValue="somevalue" placeholder="test">
     Chain ID of the network {chain}.
   </ParamField>
   <ParamField query="module" type="string" initialValue="account">
