--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,11 +1,13 @@
 ---
 title: 'Introduction'
-description: 'Testing some custom variables'
 ---
 
 import { chain } from '/snippets/custom-variables.mdx';
 import MySnippet from '/snippets/my-snippet.mdx';
+import { MyJSXSnippet } from '/snippets/jsx-snippet.jsx';
 
  The chain you're looking at now is {chain}.
 
-<MySnippet word="example" />
+<MySnippet word="Etherscan" />
+
+<MyJSXSnippet />
