--- a/introduction.mdx
+++ b/introduction.mdx
@@ -2,12 +2,10 @@
 title: 'Introduction'
 ---
 
-import { chain } from '/snippets/custom-variables.mdx';
 import MySnippet from '/snippets/my-snippet.mdx';
-import { MyJSXSnippet } from '/snippets/jsx-snippet.jsx';
+import MyJSXSnippet from '/snippets/jsx-snippet.jsx';
+import { chain } from '/snippets/jsx-variable.jsx';
 
  The chain you're looking at now is {chain}.
-
-<MySnippet word="Etherscan" />
 
 <MyJSXSnippet />
