--- a/introduction.mdx
+++ b/introduction.mdx
@@ -3,9 +3,7 @@ title: 'Introduction'
 ---
 
 import MySnippet from '/snippets/my-snippet.mdx';
-import MyJSXSnippet from '/snippets/jsx-snippet.jsx';
-import { chain } from '/snippets/jsx-variable.jsx';
-
- The chain you're looking at now is {chain}.
+import { MyJSXSnippet, Chain } from '/snippets/jsx-snippet.jsx';
 
 <MyJSXSnippet />
+<Chain />
