--- a/introduction.mdx
+++ b/introduction.mdx
@@ -2,8 +2,8 @@
 title: 'Introduction'
 ---
 
-import MySnippet from '/snippets/my-snippet.mdx';
-import { MyJSXSnippet, Chain } from '/snippets/jsx-snippet.jsx';
+Etherscan is the leading blockchain explorer, search, API and analytics platform for Ethereum, a decentralized smart contracts platform.
 
-<MyJSXSnippet />
-<Chain />
+As a means to provide equitable access to blockchain data, we've developed the Etherscan Developer APIs to empower developers with direct access to Etherscan's block explorer data and services via GET/POST requests.
+
+Etherscan's APIs are provided as a community service and without warranty, so please use what you need and no more.
