Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -7,3 +7,5 @@ Etherscan is the leading blockchain explorer, search, API and analytics platform
 As a means to provide equitable access to blockchain data, we've developed the Etherscan Developer APIs to empower developers with direct access to Etherscan's block explorer data and services via GET/POST requests.
 
 Etherscan's APIs are provided as a community service and without warranty, so please use what you need and no more.
+
+<Info>Source attribution via a backlink or a mention that your app is "Powered by Etherscan.io APIs" is required except for personal/private usage.</Info>
