--- a/development.mdx
+++ b/development.mdx
@@ -1,112 +1,63 @@
 ---
-title: "Development"
-description: "Preview changes locally to update your docs"
+title: "Common Error Messages"
 ---
 
-<Info>
-  **Prerequisite**: Please install Node.js (version 19 or higher) before proceeding. 
+An API call that encounters an error :warning: will return 0 as its `status code` and display the cause of the error under the `result` field.
 
-  
-  Please upgrade to `docs.json` before proceeding and delete the legacy `mint.json` file.
-</Info>
-
-Follow these steps to install and run Mintlify on your operating system:
-
-**Step 1**: Install Mintlify:
-
-<CodeGroup>
-
-```bash npm
-npm i -g mintlify
+```http
+{
+   "status":"0",
+   "message":"NOTOK",
+   "result":"Max rate limit reached, please use API Key for higher rate limit"
+}
 ```
 
+### Invalid API Key
 
-```bash yarn
-yarn global add mintlify
-```
+> "Invalid API Key"
 
-</CodeGroup>
+This error occurs when you specify an invalid API Key, or use a key from an explorer on a [**different chain**](../faq#can-the-same-api-keys-be-used-across-different-explorers).
 
-**Step 2**: Navigate to the docs directory (where the `docs.json` file is located) and execute the following command:
+To resolve, ensure that you have copy pasted the right key from the right explorer.
 
-```bash
-mintlify dev
-```
+New API Keys may also take a moment to be fully activated, so if your fresh key is throwing an error consider waiting for a few minutes.
 
-A local preview of your documentation will be available at `http://localhost:3000`.
+### Max rate limit
 
-### Custom Ports
+> "Max rate limit reached, please use API Key for higher rate limit"
 
-By default, Mintlify uses port 3000. You can customize the port Mintlify runs on by using the `--port` flag. To run Mintlify on port 3333, for instance, use this command:
+This error occurs when you **exceed the rate limit** assigned to your specific API key.
 
-```bash
-mintlify dev --port 3333
-```
+To resolve, adhere to the [**rate limits**](rate-limits) of your available plan by waiting for a certain amount of time before each request. If you are using a script or application, **apply throttling** to limit the frequency of calls.
 
-If you attempt to run Mintlify on a port that's already in use, it will use the next available port:
+### Missing or invalid action
 
-```md
-Port 3000 is already in use. Trying 3001 instead.
-```
+> "Error! Missing Or invalid Action name"
 
-## Mintlify Versions
+This error occurs when you **do not specify**, or specify an **invalid** `module` and `action` name.
 
-Please note that each CLI release is associated with a specific version of Mintlify. If your local website doesn't align with the production version, please update the CLI:
+To resolve, **double check** your API query to use a valid module and action name.
 
-<CodeGroup>
+If you require some help getting started, try copying the sample queries provided in the [**API Endpoints**](https://github.com/BlockSolutions/etherscan-api-docs/blob/master/support/broken-reference/README.md) and pasting them into your browser.
 
-```bash npm
-npm i -g mintlify@latest
-```
+### Endpoint-specific errors
 
+> "Error! Block number already pass"
+>
+> "Error! Invalid address format"
+>
+> "Contract source code not verified"
 
-```bash yarn
-yarn global upgrade mintlify
-```
+These error messages returned are specific to certain endpoints and their **related parameters.**
 
-</CodeGroup>
+To resolve, kindly refer to the specific endpoint's documentation, and check for the **correct format** or **values** to be specified as **parameters.**
 
-## Validating Links
+### **Query Timeout**
 
-The CLI can assist with validating reference links made in your documentation. To identify any broken links, use the following command:
+> "Query Timeout occured. Please select a smaller result dataset"
+>
+> "Unexpected err, timeout occurred or server too busy. Please try again later"
 
-```bash
-mintlify broken-links
-```
+This error occurs when you have sent a particularly large query that did not manage to be completed in time.
 
-## Deployment
-
-<Tip>
-  Unlimited editors available under the [Pro
-  Plan](https://mintlify.com/pricing) and above.
-</Tip>
-
-If the deployment is successful, you should see the following:
-
-<Frame>
-  <img
-    src="/images/checks-passed.png"
-    style={{ borderRadius:"0.5rem" }}
-  />
-</Frame>
-
-## Code Formatting
-
-We suggest using extensions on your IDE to recognize and format MDX. If you're a VSCode user, consider the [MDX VSCode extension](https://marketplace.visualstudio.com/items?itemName=unifiedjs.vscode-mdx) for syntax highlighting, and [Prettier](https://marketplace.visualstudio.com/items?itemName=esbenp.prettier-vscode) for code formatting.
-
-## Troubleshooting
-
-<AccordionGroup>
-  <Accordion title='Error: Could not load the "sharp" module using the darwin-arm64 runtime'>
-    This may be due to an outdated version of node. Try the following:
-
-    1. Remove the currently-installed version of mintlify: `npm remove -g mintlify`
-    2. Upgrade to Node v19 or higher.
-    3. Reinstall mintlify: `npm install -g mintlify`
-  </Accordion>
-  <Accordion title="Issue: Encountering an unknown error">
-    Solution: Go to the root of your device and delete the ~/.mintlify folder. Afterwards, run `mintlify dev` again.
-  </Accordion>
-</AccordionGroup>
-
-Curious about what changed in the CLI version? [Check out the CLI changelog.](https://www.npmjs.com/package/mintlify?activeTab=versions)
+To resolve, consider selecting a smaller date/block range, though you may [**ping us**](getting-help) if you think the issue may be performance related.
