--- a/snippets/custom-variables.mdx
+++ b/snippets/custom-variables.mdx
@@ -1,2 +1,4 @@
 export const chain = '1';
 export const polygonChain = '137';
+export const chainCurrency = 'ETH';
+export const polygonChainCurrency = 'MATIC';
