--- a/api-reference/endpoint/etherscan-balance.mdx
+++ b/api-reference/endpoint/etherscan-balance.mdx
@@ -1,11 +1,11 @@
 ---
-title: 'Get Ether Balance for a Single Address'
+title: 'Get Native Balance for a Single Address'
 api: 'GET /v2/api'
 ---
 
-import { chain } from '/snippets/custom-variables.mdx';
+import { chain, chainCurrency } from '/snippets/custom-variables.mdx';
 
-Returns the Ether balance of a given address on {chain}.
+Returns the {chainCurrency} balance of a given address on {chain}.
 
   <ParamField query="chainid" type="string" initialValue="somevalue" placeholder="test">
     Chain ID of the network {chain}.
