--- a/api-reference/endpoint/etherscan-transactions-137.mdx
+++ b/api-reference/endpoint/etherscan-transactions-137.mdx
@@ -1,27 +1,24 @@
 ---
-title: 'Get Normal Transactions for An Address'
+title: 'Get ABI for Verified Contract Source Codes'
 api: 'GET /v2/api'
 ---
 
 import { polygonChain } from '/snippets/custom-variables.mdx';
 
-Returns the Normal Transactions for a given address on {polygonChain}.
+Returns the ABI for a verified contract address on {polygonChain}.
 
-  <ParamField query="chainid" type="string" initialValue="somevalue" placeholder="test">
-    Chain ID of the network {polygonChain}.
-  </ParamField>
-  <ParamField query="module" type="string" initialValue="account">
-    Module name (set to 'account').
-  </ParamField>
-  <ParamField query="action" type="string" initialValue="balance">
-    Action type (set to 'balance').
-  </ParamField>
-  <ParamField query="address" type="string" initialValue="0xde0b295669a9fd93d5f28d9ec85e40f4cb697bae">
-    Wallet address to query.
-  </ParamField>
-  <ParamField query="tag" type="string" initialValue="latest">
-    Block tag ("earliest", "pending", or "latest").
-  </ParamField>
-  <ParamField query="apikey" type="string">
-    Your Etherscan API key.
-  </ParamField>
+  <ParamField query="chainid" type="string" initialValue="1" placeholder="e.g. 1">
+  Chain ID of the network (e.g., 1 for Ethereum mainnet).
+</ParamField>
+<ParamField query="module" type="string" initialValue="contract">
+  Module name (set to 'contract').
+</ParamField>
+<ParamField query="action" type="string" initialValue="getabi">
+  Action type (set to 'getabi' to retrieve contract ABI).
+</ParamField>
+<ParamField query="address" type="string" initialValue="0xBB9bc244D798123fDe783fCc1C72d3Bb8C189413">
+  Contract address to query.
+</ParamField>
+<ParamField query="apikey" type="string" placeholder="YourApiKeyToken">
+  Your Etherscan API key.
+</ParamField>
