--- a/essentials/code.mdx
+++ b/essentials/code.mdx
@@ -1,7 +1,7 @@
 ---
-title: 'Code Blocks'
+title: 'Accounting'
 description: 'Display inline code and code blocks'
-icon: 'code'
+icon: 'book'
 ---
 
 ## Basic
