--- a/essentials/images.mdx
+++ b/essentials/images.mdx
@@ -1,7 +1,7 @@
 ---
-title: 'Images and Embeds'
+title: 'Security'
 description: 'Add image, video, and other HTML elements'
-icon: 'image'
+icon: 'shield'
 ---
 
 <img
