--- a/essentials/markdown.mdx
+++ b/essentials/markdown.mdx
@@ -1,7 +1,7 @@
 ---
-title: 'Markdown Syntax'
+title: 'Devtools'
 description: 'Text, title, and styling in standard markdown'
-icon: 'text-size'
+icon: 'wrench'
 ---
 
 ## Titles
