--- a/introduction.mdx
+++ b/introduction.mdx
@@ -8,4 +8,11 @@ As a means to provide equitable access to blockchain data, we've developed the E
 
 Etherscan's APIs are provided as a community service and without warranty, so please use what you need and no more.
 
-<Info>Source attribution via a backlink or a mention that your app is "Powered by Etherscan.io APIs" is required except for personal/private usage.</Info>
+<Columns cols={2}>
+  <Card title="Make Your First Request" icon="code">
+    In your preferred language including Python, .NET, Node and more.
+  </Card>
+  <Card title="Get an Endpoint from an Etherscan Page" icon="globe">
+    Look for the code icon to get the relevant endpoint.
+  </Card>
+</Columns>
