Documentation edits made through Mintlify web editor

--- a/api-reference/endpoint/etherscan-balance.mdx
+++ b/api-reference/endpoint/etherscan-balance.mdx
@@ -6,9 +6,7 @@ api: 'GET /v2/api'
 import { chain, chainCurrency } from '/snippets/custom-variables.mdx';
 import { CreditChip } from '/snippets/jsx-snippet.jsx';
 
-Returns the {chainCurrency} balance of a given address on {chain}.
-
-<CreditChip />
+Returns the {chainCurrency} balance of a given address on {chain}. <CreditChip />
 
   <ParamField query="chainid" type="string" initialValue="somevalue" placeholder="test">
     Chain ID of the network {chain}.
