--- a/api-reference/endpoint/etherscan-balance.mdx
+++ b/api-reference/endpoint/etherscan-balance.mdx
@@ -1,12 +1,13 @@
 ---
 title: 'Get Native Balance for a Single Address'
 api: 'GET /v2/api'
+keywords: ['Ether balance', 'Etherscan balance']
 ---
 
 import { chain, chainCurrency } from '/snippets/custom-variables.mdx';
 import { CreditChip } from '/snippets/jsx-snippet.jsx';
 
-Returns the {chainCurrency} balance of a given address on {chain}. <CreditChip />
+<CreditChip description="Returns the balance of a given address" />
 
   <ParamField query="chainid" type="string" initialValue="somevalue" placeholder="test">
     Chain ID of the network {chain}.
