--- a/api-reference/endpoint/etherscan-balance.mdx
+++ b/api-reference/endpoint/etherscan-balance.mdx
@@ -7,7 +7,7 @@ keywords: ['Ether balance', 'Etherscan balance']
 import { chain, chainCurrency } from '/snippets/custom-variables.mdx';
 import { CreditChip } from '/snippets/jsx-snippet.jsx';
 
-<CreditChip description="Returns the balance of a given address" />
+<CreditChip description="Returns the balance of a given address" pro={true} />
 
   <ParamField query="chainid" type="string" initialValue="somevalue" placeholder="test">
     Chain ID of the network {chain}.
