--- a/api-reference/endpoint/etherscan-nametag.mdx
+++ b/api-reference/endpoint/etherscan-nametag.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Get Nametags for An Address'
 api: 'GET /v2/api'
+keywords: ['labels', 'nametag', 'phish', 'hack']
 ---
 
 import { chain } from '/snippets/custom-variables.mdx';
