--- a/v2-migration.mdx
+++ b/v2-migration.mdx
@@ -56,7 +56,7 @@ All V1 endpoints from other explorers such as Basescan/BscScan/Polygonscan etc a
 https://api.polygonscan.com/api?&action=balance&apikey=YourPolygoncsanApiKeyToken
 ```
 
-You only need to use an Etherscan `/v2` path, include a `chainid` and use your Etherscan API Key.
+You only need to use an Etherscan `/v2` path, include a `chainid` and use Your Etherscan API key. If you're still using a legacy key from another explorer like BscScan/Basescan and so on, please refer to this migration.
 
 ```
 https://api.etherscan.io/v2/api?chainid=1&action=balance&apikey=YourEtherscanApiKeyToken
