--- a/api-reference/endpoint/etherscan-balancehistory.mdx
+++ b/api-reference/endpoint/etherscan-balancehistory.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Get Historical Ether Balance for a Single Address By BlockNo'
+title: 'Get Historical Native Balance for an Address'
 api: 'GET /v2/api'
 keywords: ['historical balance', 'balance history']
 ---
@@ -9,21 +9,21 @@ import { CreditChip } from '/snippets/jsx-snippet.jsx';
 
 <CreditChip description="Returns the balance of an address at a given block height" pro={true} />
 
-  <ParamField query="chainid" type="string" initialValue="1" placeholder="e.g. 1">
-    Chain ID of the network {chain}.
+  <ParamField query="chainid" type="string" initialValue="1">
+    Chain ID to query, eg `1` for Ethereum, `8453` for Base from our [supported chains](/development).
   </ParamField>
   <ParamField query="module" type="string" initialValue="account">
-    Module name (set to 'account').
+    Set to `account` for this endpoint.
   </ParamField>
   <ParamField query="action" type="string" initialValue="balancehistory">
-    Action type (set to 'balancehistory').
+    Set to `balancehistory` for this endpoint.
   </ParamField>
   <ParamField query="address" type="string" initialValue="0xde0b295669a9fd93d5f28d9ec85e40f4cb697bae">
-    Address to query.
+    The address to query, like `0xfefefefefefefefefefefefefefefefefefefefe`.
   </ParamField>
   <ParamField query="blockno" type="integer" initialValue="8000000">
-    Block number to check balance at.
+    Block number to check balance at, all the way up to the genesis block `0`.
   </ParamField>
   <ParamField query="apikey" type="string">
-    Your Etherscan API key.
+    Your Etherscan API key. If you're still using a legacy key from another explorer like BscScan/Basescan and so on, please refer to this migration.
   </ParamField>
