--- a/api-reference/endpoint/etherscan-getminedblocks.mdx
+++ b/api-reference/endpoint/etherscan-getminedblocks.mdx
@@ -9,17 +9,17 @@ import { CreditChip } from '/snippets/jsx-snippet.jsx';
 
 <CreditChip description="Returns blocks validated by an address" />
 
-  <ParamField query="chainid" type="string" initialValue="1" placeholder="e.g. 1">
-    Chain ID of the network {chain}.
+  <ParamField query="chainid" type="string" initialValue="1" >
+    Chain ID to query, eg `1` for Ethereum, `8453` for Base from our [supported chains](/development).
   </ParamField>
   <ParamField query="module" type="string" initialValue="account">
-    Module name (set to 'account').
+    Set to `account` for this endpoint
   </ParamField>
   <ParamField query="action" type="string" initialValue="getminedblocks">
     Action type (set to 'getminedblocks').
   </ParamField>
   <ParamField query="address" type="string" initialValue="0x9dd134d14d1e65f84b706d6f205cd5b1cd03a46b">
-    Validator address to query.
+    Validator The address to query, like `0xfefefefefefefefefefefefefefefefefefefefe`.
   </ParamField>
   <ParamField query="blocktype" type="string" initialValue="blocks">
     Block type ('blocks' or 'uncles').
@@ -31,5 +31,5 @@ import { CreditChip } from '/snippets/jsx-snippet.jsx';
     Number of records per page.
   </ParamField>
   <ParamField query="apikey" type="string">
-    Your Etherscan API key.
+    Your Etherscan API key. If you're still using a legacy key from another explorer like BscScan/Basescan and so on, please refer to this migration.
   </ParamField>
