--- a/api-reference/endpoint/etherscan-token1155tx.mdx
+++ b/api-reference/endpoint/etherscan-token1155tx.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Get a list of 'ERC1155 - Token Transfer Events' by Address"
+title: "Get ERC1155 Token Transfers by Address"
 api: 'GET /v2/api'
 keywords: ['ERC1155 transfers', 'token1155tx']
 ---
@@ -9,20 +9,20 @@ import { CreditChip } from '/snippets/jsx-snippet.jsx';
 
 <CreditChip description="Returns ERC-1155 token transfers for an address" />
 
-  <ParamField query="chainid" type="string" initialValue="1" placeholder="e.g. 1">
-    Chain ID of the network {chain}.
+  <ParamField query="chainid" type="string" initialValue="1" >
+    Chain ID to query, eg `1` for Ethereum, `8453` for Base from our [supported chains](/development).
   </ParamField>
   <ParamField query="module" type="string" initialValue="account">
-    Module name (set to 'account').
+    Set to `account` for this endpoint.
   </ParamField>
   <ParamField query="action" type="string" initialValue="token1155tx">
-    Action type (set to 'token1155tx').
+    Set to `token1155tx` for this endpoint.
   </ParamField>
   <ParamField query="contractaddress" type="string" initialValue="0x76be3b62873462d2142405439777e971754e8e77">
-    Token contract address.
+    The ERC1155 token contract address to filter transfers by, eg `0x495f947276749ce646f68ac8c248420045cb7b5e` for [Opensea Shared Storefront](https://etherscan.io/token/0x495f947276749ce646f68ac8c248420045cb7b5e).
   </ParamField>
   <ParamField query="address" type="string" initialValue="0x83f564d180b58ad9a02a449105568189ee7de8cb">
-    Address to filter token transfers by.
+    The address to query, like `0xfefefefefefefefefefefefefefefefefefefefe`
   </ParamField>
   <ParamField query="page" type="integer" initialValue="1">
     Page number for pagination.
@@ -37,8 +37,8 @@ import { CreditChip } from '/snippets/jsx-snippet.jsx';
     Ending block number to search to.
   </ParamField>
   <ParamField query="sort" type="string" initialValue="asc">
-    Sort order ("asc" or "desc").
+        Sort order either `desc` for the latest transactions first or `asc` for the oldest transactions first.
   </ParamField>
   <ParamField query="apikey" type="string">
-    Your Etherscan API key.
+    Your Etherscan API key. If you're still using a legacy key from another explorer like BscScan/Basescan and so on, please refer to this migration.
   </ParamField>
