--- a/api-reference/endpoint/etherscan-tokentx.mdx
+++ b/api-reference/endpoint/etherscan-tokentx.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Get a list of 'ERC20 - Token Transfer Events' by Address"
+title: "Get ERC20 Token Transfers by Address"
 api: 'GET /v2/api'
 keywords: ['ERC20 transfers', 'tokentx']
 ---
@@ -9,26 +9,20 @@ import { CreditChip } from '/snippets/jsx-snippet.jsx';
 
 <CreditChip description="Returns ERC-20 token transfers for an address" />
 
-  <ParamField query="chainid" type="string" initialValue="1" placeholder="e.g. 1">
-    Chain ID of the network {chain}.
+  <ParamField query="chainid" type="string" initialValue="1" >
+    Chain ID to query, eg `1` for Ethereum, `8453` for Base from our [supported chains](/development).
   </ParamField>
   <ParamField query="module" type="string" initialValue="account">
-    Module name (set to 'account').
+    Set to `account` for this endpoint
   </ParamField>
   <ParamField query="action" type="string" initialValue="tokentx">
-    Action type (set to 'tokentx').
+    Set to `tokentx` for this endpoint
   </ParamField>
   <ParamField query="contractaddress" type="string" initialValue="0x9f8f72aa9304c8b593d555f12ef6589cc3a579a2">
-    Token contract address.
+    The ERC20 token contract address to filter transfers by, eg `0xdac17f958d2ee523a2206206994597c13d831ec7` for USDT.
   </ParamField>
   <ParamField query="address" type="string" initialValue="0x4e83362442b8d1bec281594cea3050c8eb01311c">
-    Address to filter token transfers by.
-  </ParamField>
-  <ParamField query="page" type="integer" initialValue="1">
-    Page number for pagination.
-  </ParamField>
-  <ParamField query="offset" type="integer" initialValue="100">
-    Number of transactions per page.
+    The address to query, like `0xfefefefefefefefefefefefefefefefefefefefe`
   </ParamField>
   <ParamField query="startblock" type="integer" initialValue="0">
     Starting block number to search from.
@@ -36,9 +30,15 @@ import { CreditChip } from '/snippets/jsx-snippet.jsx';
   <ParamField query="endblock" type="integer" initialValue="27025780">
     Ending block number to search to.
   </ParamField>
+    <ParamField query="page" type="integer" initialValue="1">
+    Page number for pagination.
+  </ParamField>
+  <ParamField query="offset" type="integer" initialValue="100">
+    Number of transactions per page.
+  </ParamField>
   <ParamField query="sort" type="string" initialValue="asc">
-    Sort order ("asc" or "desc").
+    Sort order either `desc` for the latest transactions first or `asc` for the oldest transactions first.
   </ParamField>
   <ParamField query="apikey" type="string">
-    Your Etherscan API key.
+    Your Etherscan API key. If you're still using a legacy key from another explorer like BscScan/Basescan and so on, please refer to this migration.
   </ParamField>
