--- a/api-reference/endpoint/etherscan-txlistinternal-txhash.mdx
+++ b/api-reference/endpoint/etherscan-txlistinternal-txhash.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Get 'Internal Transactions' by Transaction Hash"
+title: "Get Internal Transactions by Transaction Hash"
 api: 'GET /v2/api'
 keywords: ['internal transactions', 'txlistinternal txhash']
 ---
@@ -9,18 +9,18 @@ import { CreditChip } from '/snippets/jsx-snippet.jsx';
 
 <CreditChip description="Returns internal transactions within a transaction" />
 
-  <ParamField query="chainid" type="string" initialValue="1" placeholder="e.g. 1">
-    Chain ID of the network {chain}.
+  <ParamField query="chainid" type="string" initialValue="1" >
+    Chain ID to query, eg `1` for Ethereum, `8453` for Base from our [supported chains](/development).
   </ParamField>
   <ParamField query="module" type="string" initialValue="account">
-    Module name (set to 'account').
+    Set to `account` for this endpoint
   </ParamField>
   <ParamField query="action" type="string" initialValue="txlistinternal">
-    Action type (set to 'txlistinternal').
+    Set to `txlistinternal` for this endpoint.
   </ParamField>
   <ParamField query="txhash" type="string" initialValue="0x40eb908387324f2b575b4879cd9d7188f69c8fc9d87c901b9e2daaea4b442170">
-    Transaction hash to check for internal transactions.
+    Transaction hash to check for internal transactions, like `0x36dc7f05085d0e4f9c3e4116345a2a487ac8f23f7e71bcc0ae20e27abbfa931d`. Only non-zero value internal transactions are returned.
   </ParamField>
   <ParamField query="apikey" type="string">
-    Your Etherscan API key.
+    Your Etherscan API key. If you're still using a legacy key from another explorer like BscScan/Basescan and so on, please refer to this migration.
   </ParamField>
