--- a/api-reference/endpoint/etherscan-txlist.mdx
+++ b/api-reference/endpoint/etherscan-txlist.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Get a list of Normal Transactions By Address"
+title: "Get Normal Transactions By Address"
 api: 'GET /v2/api'
 keywords: ['transactions', 'txlist']
 ---
