--- a/api-reference/endpoint/getcontractcreation.mdx
+++ b/api-reference/endpoint/getcontractcreation.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Get Contract Creator and Creation Tx Hash'
-description: 'Retrieve a contract's deployer address and creation transaction.'
+description: "Retrieve a contract's deployer address and creation transaction."
 api: 'GET /v2/api'
 keywords: ['contract creator', 'creation transaction']
 ---
@@ -8,7 +8,7 @@ keywords: ['contract creator', 'creation transaction']
 import { chain } from '/snippets/custom-variables.mdx';
 import { CreditChip } from '/snippets/jsx-snippet.jsx';
 
-<CreditChip description="Returns a contract's deployer address and creation transaction" />
+<CreditChip description="Returns a contract's deployer address and creation transaction." />
 
   <ParamField query="chainid" type="string" initialValue="1">
     Chain ID to query, eg `1` for Ethereum, `8453` for Base from our [supported chains](/development).
