--- a/api-reference/endpoint/ethdailyprice.mdx
+++ b/api-reference/endpoint/ethdailyprice.mdx
@@ -9,6 +9,9 @@ import { CreditChip } from '/snippets/jsx-snippet.jsx';
 
 <CreditChip description="Returns the historical price of 1 ETH" pro={true} />
 
+  <ParamField path="v2" type="string" default="v2">
+    Use the new V2 base URL https://api.etherscan.io/v2/api
+  </ParamField>
   <ParamField query="chainid" type="string" initialValue="1">
     Chain ID to query, eg `1` for Ethereum, `8453` for Base from our [supported chains](/development).
   </ParamField>
