--- a/api-reference/endpoint/ethsupply2.mdx
+++ b/api-reference/endpoint/ethsupply2.mdx
@@ -9,6 +9,9 @@ import { CreditChip } from '/snippets/jsx-snippet.jsx';
 
 <CreditChip description="Returns Ether supply details including staking rewards, burnt fees, and withdrawn amounts" />
 
+  <ParamField path="v2" type="string" default="v2">
+    Use the new V2 base URL https://api.etherscan.io/v2/api
+  </ParamField>
   <ParamField query="chainid" type="string" initialValue="1">
     Chain ID to query, eg `1` for Ethereum, `8453` for Base from our [supported chains](/development).
   </ParamField>
