--- a/resources/frequently-asked.mdx
+++ b/resources/frequently-asked.mdx
@@ -4,4 +4,4 @@ title: "Frequently Asked"
 
 ## Are Similar Match contract returned for the source code (getsourcecode) and ABI (getabi) endpoint ?
 
-Yes, all verified contracts will return data. If it doesn't thats a bug that you should report to us.
+Yes, all verified contracts will return data. A contract is verified if it has a green or yellow check  mark on Etherscan. If it doesn't thats a bug that you should report to us.
