--- a/contract-verification/common-verification-errors.mdx
+++ b/contract-verification/common-verification-errors.mdx
@@ -87,6 +87,14 @@ This error indicates that the contract has already been verified via <a href="ht
 
 Kindly <a href="https://info.etherscan.com/update-on-similar-match-contract-verification/"><strong>reach out</strong></a> to us at this point of time to have this updated to Full Match if required.
 
+### Similar Match API Responses
+
+<Info>
+Both <a href="../api-reference/endpoint/getsourcecode"><code>getsourcecode</code></a> and <a href="../api-reference/endpoint/getabi"><code>getabi</code></a> return data for contracts verified via Similar Match.
+</Info>
+
+If a verified contract does not return data from these endpoints, report the issue to us.
+
 ### Unsupported Solc Version
 
 > "Invalid or not supported solc version, see https://etherscan.io/solcversions for list"
