--- a/api-reference/endpoint/balance.mdx
+++ b/api-reference/endpoint/balance.mdx
@@ -9,13 +9,10 @@ import { CreditChip } from '/snippets/jsx-snippet.jsx';
 
 <CreditChip description="Returns the balance of a given address" pro={true} />
 
-  <ParamField path="v2" type="string" default="v2">
-    Use the new V2 base URL https://api.etherscan.io/v2/api
-  </ParamField>
   <ParamField query="chainid" type="string" initialValue="1">
     Chain ID to query, eg `1` for Ethereum, `8453` for Base from our [supported chains](/development).
   </ParamField>
-  <ParamField query="module" type="string" initialValue="account" required placeholder="test">
+  <ParamField query="module" type="string" required default="test">
     Set to `account` for this endpoint.
   </ParamField>
   <ParamField query="action" type="string" initialValue="balance">
