--- a/api-reference/endpoint/balance.mdx
+++ b/api-reference/endpoint/balance.mdx
@@ -9,19 +9,19 @@ import { CreditChip } from '/snippets/jsx-snippet.jsx';
 
 <CreditChip description="Returns the balance of a given address" pro={true} />
 
-  <ParamField query="chainid" type="string" initialValue="1">
+  <ParamField query="chainid" type="string" default="1">
     Chain ID to query, eg `1` for Ethereum, `8453` for Base from our [supported chains](/development).
   </ParamField>
   <ParamField query="module" type="string" required default="test">
     Set to `account` for this endpoint.
   </ParamField>
-  <ParamField query="action" type="string" initialValue="balance">
+  <ParamField query="action" type="string" default="balance">
     Set to `balance` for this endpoint.
   </ParamField>
-  <ParamField query="address" type="string" initialValue="0xde0b295669a9fd93d5f28d9ec85e40f4cb697bae">
+  <ParamField query="address" type="string" default="0xde0b295669a9fd93d5f28d9ec85e40f4cb697bae">
     The address to query, like `0xfefefefefefefefefefefefefefefefefefefefe`. Up to 20 addresses can be queried, separated by commas.
   </ParamField>
-  <ParamField query="tag" type="string" initialValue="latest">
+  <ParamField query="tag" type="string" default="latest">
     Use `latest` for the last block number of the chain. Also accepts a specific block number in hex format, like `0x10d4f` up to the last 128 blocks. For historical balances, use the [Historical Balance](/api-reference/endpoint/balancehistory) endpoint.  
   </ParamField>
   <ParamField query="apikey" type="string">
